tests/core/snapshots/grpc-map.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000)
@upstream(batch: { delay: 10, headers: [] }, httpCache: 42)
@link(src: "map.proto", type: Protobuf)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

input map__MapRequest {
  map: JSON!
}

type Query {
  map__MapService__GetMap(mapRequest: map__MapRequest!): map__MapResponse!
  @grpc(
    url: "http://localhost:50051"
    body: "{{.args.mapRequest}}"
    method: "map.MapService.GetMap"
  )
}

type map__MapResponse {
  map: JSON!
}
