tests/core/snapshots/http-select.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Company {
  catchPhrase: String!
  name: String!
}

type Query {
  userCompany(id: Int!): Company
  @http(url: "http://upstream/users/{{.args.id}}", select: "{{.company}}")
  userDetails(id: Int!): UserDetails
  @http(
    url: "http://upstream/users/{{.args.id}}"
    select: { id: "{{.id}}", city: "{{.address.city}}", phone: "{{.phone}}" }
  )
}

type UserDetails {
  city: String!
  id: Int!
  phone: String!
}
